--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -14,9 +14,60 @@
         <div id="myGestureListener">
             <p>Status : </p>
             <p id="gestureStatus"></p>
+            <div>
+                <h3>Model(Slide) 1</h3>
+                <p class="badge">Some texts</p>
+                <ul>
+                    <li>1st</li>
+                    <li>2nd</li>
+                    <li>3rd</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Model(Slide) 2</h3>
+                <p class="label-primary">Some texts</p>
+                <p>lolololololol</p>
+            </div>
+            <div class="jumbotron">
+                <h3>Model(Slide) 3</h3>
+                <p>Some texts</p>
+                <p>loldgbfdbgdololololol</p>
+            </div>
+            <div>
+                <h3>Model(Slide) 4</h3>
+                <p class="label-primary">Some texts</p>
+                <p>lolol</p>
+            </div>
+            <p>You scored <b>192</b> points.</p>
+            <div>
+                <h3>Model(Slide) 5</h3>
+                <p class="badge">Some texts</p>
+                <ul>
+                    <li>1st</li>
+                    <li>2nd</li>
+                    <li>3rd</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Model(Slide) 6</h3>
+                <p class="label-primary">Some texts</p>
+                <p>lolololololol</p>
+            </div>
+            <div class="jumbotron">
+                <h3>Model(Slide) 7</h3>
+                <p>Some texts</p>
+                <p>loldgbfdbgdololololol</p>
+            </div>
+            <div>
+                <h3>Model(Slide) 8</h3>
+                <p class="label-primary">Some texts</p>
+                <p>lolol</p>
+            </div>
+            <p>You scored <b>192</b> points.</p>
         </div>
+
     </div>
-    
+
     <!-- Inculde JS files -->
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
